# Portfolio

./: FileSorter.ipynb  Pathfinder.py
Ascii_Video_Project/: CMakeLists.txt  build.sh  main.cpp
C# .Net Expense Tracker/: Expense App.sln
C# .Net Expense Tracker/Controllers/: CategoryController.cs  DashboardController.cs  HomeController.cs  TransactionController.cs
C# .Net Expense Tracker/Migrations/: 20240101073848_Intial Create.Designer.cs  20240101073848_Intial Create.cs  ApplicationDbContextModelSnapshot.cs
C# .Net Expense Tracker/Models/: ApplicationDbContext.cs  Category.cs  ErrorViewModel.cs  Transaction.cs
C# .Net Expense Tracker/Views/Category/: AddorEdit.cshtml  Index.cshtml
C# .Net Expense Tracker/Views/Dashboard/: Index.cshtml
C# .Net Expense Tracker/Views/Shared/: _Layout.cshtml  _SideBar.cshtml
C# .Net Expense Tracker/Views/Transaction/: AddorEdit.cshtml  Index.cshtml
C# .Net Expense Tracker/wwwroot/css/: site.css
C++ Monopoly Simulation/: CCard.cpp  CCard.h  CStudent.cpp  CStudent.h  CardMaker.cpp  CardMaker.h  Console Output.docx  Source.cpp
FileSorter/: FileSorter.py
Footballing Algorithm/: data_science_as2.ipynb
IMDB Sentiment Analysis Project/: Sentiment Analysis Project.ipynb
JavaScript Car Website/: index.html  script.js  style.css
Pathfinder A* Algorithm/: PathfindingAlgorithm.py
Skin Cancer Classification Algorithm/: ai_skin_assignment.ipynb
SnakeGame/: CMakeLists.txt  main.c
Spinning and Beating Heart/: CMakeLists.txt  main.c
